fixing css in html template for MIT mock degree

--- a/html-templates/mock-MIT-bachelors-template.html
+++ b/html-templates/mock-MIT-bachelors-template.html
@@ -6,14 +6,12 @@
 
 <style type="text/css">
 
-.name {
-	p.italic {
-		font-style: italic;
-	}
+p.italic {
+	font-style: italic;
+}
 
-	p.upper {
-		text-transform: uppercase;
-	}
+p.upper {
+	text-transform: uppercase;
 }
 </style>
 </head>
@@ -27,7 +25,7 @@
 <p>THE MOCK DEGREE OF</p>
 <p>BACHELOR OF SCIENCE</p>
 	<p>IN</p>
-<p class="italic uppercase">{{ credential.fieldOfStudy }}</p>
+<p class="italic upper">{{ credential.fieldOfStudy }}</p>
 <p>IN RECONITION OF PROFICIENCY IN THE GENERAL AND THE</p>
 <p>SPECIAL STUDIES AND EXERCISES PRESCRIBED BY SAID INSTITUTION</p>
 <p>FOR SUCH MOCK DEGREE GIVEN THIS DAY UNDER THE SEAL OF THE</p>
