--- a/html-templates/mock-MIT-bachelors-template.html
+++ b/html-templates/mock-MIT-bachelors-template.html
@@ -18,7 +18,7 @@ p.upper {
 
 <body>
 <div align="center">
-	<img src="../logos/mit-logo.png" width="410" height="73" alt=""/>
+	<img src="https://github.com/digitalcredentials/test-files/assets/206059/184a6f68-ef64-4c18-b92f-5a7d60894ac2" width="410" height="73" alt=""/>
 <p>UPON THE RECOMMENDATION OF THE FACULTY </p>
 <p>HEREBY CONFERS ON</p>
 <p class="italic"><strong>{{ credential.credentialSubject.name }}</strong></p>
@@ -32,6 +32,6 @@ p.upper {
 <P>INSTITUTE AT CAMBRIDGE IN THE COMMONWEALTH OF</P>
 <p>MASSACHUSETTS</p>
 <p><strong>September 16, 2020</strong></p>
-<img src="../logos/mit-seal.png" width="223" height="303" alt=""/> </div>
+<img src="https://github.com/digitalcredentials/test-files/assets/206059/f81fb6d4-eaf4-4709-a38e-1d47fb308e62" width="223" height="303" alt=""/> </div>
 </body>
 </html>
