--- a/html-templates/mock-tec-degree-template.html
+++ b/html-templates/mock-tec-degree-template.html
@@ -46,6 +46,10 @@
             text-align: center;
             margin: 10px 0;
         }
+		
+		.sello-autenticocion {
+			overflow-wrap: break-word;
+		}
     </style>
 </head>
 <body>
@@ -64,7 +68,7 @@
     <img src="https://github.com/digitalcredentials/test-files/assets/206059/6acd3f0a-a774-4170-a93a-6079dc543125" width="500" height="124" alt=""/> </div>
     <p>Titulo Electronico folio control: {{ credential.evidence.[0].narrative }}</p>
     <p>Sello Autenticocion:</p>
-    <p>{{ credential.evidence.[1].narrative }}</p>
+    <p class="sello-autenticocion">{{ credential.evidence.[1].narrative }}</p>
     <p>No. Certifico Autoridad:</p>
     <p>{{ credential.evidence.[2].narrative }}</p>
 </div>
