fixing spelling typo

--- a/html-templates/mock-MIT-bachelors-template.html
+++ b/html-templates/mock-MIT-bachelors-template.html
@@ -26,7 +26,7 @@ p.upper {
 <p>BACHELOR OF SCIENCE</p>
 	<p>IN</p>
 <p class="italic upper">{{ credential.credentialSubject.fieldOfStudy }}</p>
-<p>IN RECONITION OF PROFICIENCY IN THE GENERAL AND THE</p>
+<p>IN RECOGNITION OF PROFICIENCY IN THE GENERAL AND THE</p>
 <p>SPECIAL STUDIES AND EXERCISES PRESCRIBED BY SAID INSTITUTION</p>
 <p>FOR SUCH MOCK DEGREE GIVEN THIS DAY UNDER THE SEAL OF THE</p>
 <P>INSTITUTE AT CAMBRIDGE IN THE COMMONWEALTH OF</P>
