removing uppercase class

--- a/html-templates/mock-MIT-bachelors-template.html
+++ b/html-templates/mock-MIT-bachelors-template.html
@@ -25,7 +25,7 @@ p.upper {
 <p>THE MOCK DEGREE OF</p>
 <p>BACHELOR OF SCIENCE</p>
 	<p>IN</p>
-<p class="italic upper">{{ credential.credentialSubject.fieldOfStudy }}</p>
+<p class="italic">{{ credential.credentialSubject.fieldOfStudy }}</p>
 <p>IN RECOGNITION OF PROFICIENCY IN THE GENERAL AND THE</p>
 <p>SPECIAL STUDIES AND EXERCISES PRESCRIBED BY SAID INSTITUTION</p>
 <p>FOR SUCH MOCK DEGREE GIVEN THIS DAY UNDER THE SEAL OF THE</p>
