removing italics class

--- a/html-templates/mock-MIT-bachelors-template.html
+++ b/html-templates/mock-MIT-bachelors-template.html
@@ -21,11 +21,11 @@ p.upper {
 	<img src="https://github.com/digitalcredentials/test-files/assets/206059/184a6f68-ef64-4c18-b92f-5a7d60894ac2" width="410" height="73" alt=""/>
 <p>UPON THE RECOMMENDATION OF THE FACULTY </p>
 <p>HEREBY CONFERS ON</p>
-<p class="italic"><strong>{{ credential.credentialSubject.name }}</strong></p>
+<p><strong>{{ credential.credentialSubject.name }}</strong></p>
 <p>THE MOCK DEGREE OF</p>
 <p>BACHELOR OF SCIENCE</p>
 	<p>IN</p>
-<p class="italic">{{ credential.credentialSubject.fieldOfStudy }}</p>
+<p>{{ credential.credentialSubject.fieldOfStudy }}</p>
 <p>IN RECOGNITION OF PROFICIENCY IN THE GENERAL AND THE</p>
 <p>SPECIAL STUDIES AND EXERCISES PRESCRIBED BY SAID INSTITUTION</p>
 <p>FOR SUCH MOCK DEGREE GIVEN THIS DAY UNDER THE SEAL OF THE</p>
