--- a/html-templates/mock-MIT-bachelors-template.html
+++ b/html-templates/mock-MIT-bachelors-template.html
@@ -21,7 +21,7 @@ p.upper {
 	<img src="https://github.com/digitalcredentials/test-files/assets/206059/184a6f68-ef64-4c18-b92f-5a7d60894ac2" width="410" height="73" alt=""/>
 <p>UPON THE RECOMMENDATION OF THE FACULTY </p>
 <p>HEREBY CONFERS ON</p>
-<p><strong>{{ credential.credentialSubject.name }}</strong></p>
+<p>{{ credential.credentialSubject.name }}</p>
 <p>THE MOCK DEGREE OF</p>
 <p>BACHELOR OF SCIENCE</p>
 	<p>IN</p>
