--- a/html-templates/mock-MIT-bachelors-template.html
+++ b/html-templates/mock-MIT-bachelors-template.html
@@ -14,7 +14,7 @@
 <p>THE MOCK DEGREE OF</p>
 <p>BACHELOR OF SCIENCE</p>
 <p>IN</p>
-<p>{{ credential.credentialSubject.fieldOfStudy }}</p>
+<p>Computer Science</p>
 <p>IN RECOGNITION OF PROFICIENCY IN THE GENERAL AND THE</p>
 <p>SPECIAL STUDIES AND EXERCISES PRESCRIBED BY SAID INSTITUTION</p>
 <p>FOR SUCH MOCK DEGREE GIVEN THIS DAY UNDER THE SEAL OF THE</p>
