--- a/html-templates/mock-MIT-bachelors-template.html
+++ b/html-templates/mock-MIT-bachelors-template.html
@@ -3,18 +3,29 @@
 <head>
 <meta charset="UTF-8">
 <title>MIT Degree</title>
+
+<style type="text/css">
+
+p.italic {
+	font-style: italic;
+}
+
+p.upper {
+	text-transform: uppercase;
+}
+</style>
 </head>
 
 <body>
 <div align="center">
-<img src="https://github.com/digitalcredentials/test-files/assets/206059/184a6f68-ef64-4c18-b92f-5a7d60894ac2" width="410" height="73" alt=""/>
+	<img src="https://github.com/digitalcredentials/test-files/assets/206059/184a6f68-ef64-4c18-b92f-5a7d60894ac2" width="410" height="73" alt=""/>
 <p>UPON THE RECOMMENDATION OF THE FACULTY </p>
 <p>HEREBY CONFERS ON</p>
-<p>{{ credential.credentialSubject.name }}</p>
+<p class="italic"><strong>{{ credential.credentialSubject.name }}</strong></p>
 <p>THE MOCK DEGREE OF</p>
 <p>BACHELOR OF SCIENCE</p>
-<p>IN</p>
-<p>Computer Science</p>
+	<p>IN</p>
+<p class="italic upper">{{ credential.credentialSubject.achievement.fieldOfStudy }}</p>
 <p>IN RECOGNITION OF PROFICIENCY IN THE GENERAL AND THE</p>
 <p>SPECIAL STUDIES AND EXERCISES PRESCRIBED BY SAID INSTITUTION</p>
 <p>FOR SUCH MOCK DEGREE GIVEN THIS DAY UNDER THE SEAL OF THE</p>
