adding example files for Tec

--- a/html-templates/mock-tec-degree-template.html
+++ b/html-templates/mock-tec-degree-template.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <style>
         body {
             margin: 0;
@@ -47,8 +48,9 @@
             margin: 10px 0;
         }
 		
-		.sello-autenticocion {
-			width: 80%;
+		.wrap {
+			width: 80% !important;
+            display: block;
 			overflow-wrap: break-word;
 		}
     </style>
@@ -67,12 +69,17 @@
     <p>{{ credential.awardedDate }}</p>
     <div class="signatures-container"> 
     <img src="https://github.com/digitalcredentials/test-files/assets/206059/6acd3f0a-a774-4170-a93a-6079dc543125" width="500" height="124" alt=""/> </div>
-    <p>Titulo Electronico folio control: {{ credential.evidence.[0].narrative }}</p>
-    <p>Sello Autenticocion:</p>
-    <p class="sello-autenticocion">{{ credential.evidence[1].narrative }}</p>
+    <p>Titulo Electrónico folio control: {{ credential.evidence.[0].narrative }}</p>
+    <p>Sello Autenticoción:</p>
+    <p class="wrap">{{ credential.evidence[1].narrative }}</p>
     <p>No. Certifico Autoridad:</p>
     <p>{{ credential.evidence.[2].narrative }}</p>
+    <p class="wrap">Sello Titulo:</p>
+    <p>{{ credential.evidence.[3].narrative }}</p>
+    <p>Fecha Autenticación:</p>
+    <p>{{ credential.evidence.[4].narrative }}</p>
+    <p>Folio Digital:</p>
+    <p>{{ credential.evidence.[5].narrative }}</p>
 </div>
-
 </body>
 </html>
