updating Tec template

--- a/html-templates/mock-tec-degree-template.html
+++ b/html-templates/mock-tec-degree-template.html
@@ -66,7 +66,7 @@
     <h2>{{ credential.name }}</h2>
     <p>considerando que ha cumplido con los estudios correspondientes y satisfecho todas los requisitos necesarios.</p>
     <p>Dado en la ciudad de Monterrey, estado de Nuevo León, el dia</p>
-    <p>{{ credential.awardedDate }}</p>
+    <p>{{ credential.awardedDatePretty }}</p>
     <div class="signatures-container"> 
     <img src="https://github.com/digitalcredentials/test-files/assets/206059/6acd3f0a-a774-4170-a93a-6079dc543125" width="500" height="124" alt=""/> </div>
     <p>Titulo Electrónico folio control: {{ credential.evidence.[0].narrative }}</p>
