debugging html template

--- a/html-templates/mock-tec-degree-template.html
+++ b/html-templates/mock-tec-degree-template.html
@@ -68,16 +68,10 @@
     <div class="signatures-container"> 
     <img src="https://github.com/digitalcredentials/test-files/assets/206059/6acd3f0a-a774-4170-a93a-6079dc543125" width="500" height="124" alt=""/> </div>
     <p>Titulo Electrónico folio control: {{ credential.evidence.[0].narrative }}</p>
-    <p>Sello Autenticoción:</p>
+    <p>Sello Autenticocion:</p>
     <p class="wrap">{{ credential.evidence[1].narrative }}</p>
     <p>No. Certifico Autoridad:</p>
     <p>{{ credential.evidence.[2].narrative }}</p>
-    <p class="wrap">Sello Titulo:</p>
-    <p>{{ credential.evidence.[3].narrative }}</p>
-    <p>Fecha Autenticación:</p>
-    <p>{{ credential.evidence.[4].narrative }}</p>
-    <p>Folio Digital:</p>
-    <p>{{ credential.evidence.[5].narrative }}</p>
 </div>
 </body>
 </html>
