--- a/html-templates/mock-tec-degree-template.html
+++ b/html-templates/mock-tec-degree-template.html
@@ -67,7 +67,7 @@
     <p>Dado en la ciudad de Monterrey, estado de Nuevo León, el dia</p>
     <div class="signatures-container"> 
     <img src="https://github.com/digitalcredentials/test-files/assets/206059/6acd3f0a-a774-4170-a93a-6079dc543125" width="500" height="124" alt=""/> </div>
-    <p>Titulo Electrónico folio control: {{ credential.evidence.[0].narrative }}</p>
+    <p>Titulo Electronico folio control: {{ credential.evidence.[0].narrative }}</p>
     <p>Sello Autenticocion:</p>
     <p class="wrap">{{ credential.evidence[1].narrative }}</p>
     <p>No. Certifico Autoridad:</p>
