debugging html template

--- a/html-templates/mock-tec-degree-template.html
+++ b/html-templates/mock-tec-degree-template.html
@@ -65,10 +65,8 @@
     <p>considerando que ha cumplido con los estudios correspondientes y satisfecho todas los requisitos necesarios.</p>
     <p>Dado en la ciudad de Monterrey, estado de Nuevo León, el dia</p>
     <p>{{ credential.awardedDate }}</p>
-    <div class="signatures-container">
-        <div class="signature">sig 1 <p>Rector y Presidente Ejecutivo</p></div>
-        <div class="signature">sig 2 <p>Rector de Profesional y Posgrado</p></div> 
-    </div>
+    <div class="signatures-container"> 
+    <img src="https://github.com/digitalcredentials/test-files/assets/206059/6acd3f0a-a774-4170-a93a-6079dc543125" width="500" height="124" alt=""/> </div>
     <p>Titulo Electronico folio control: {{ credential.evidence.[0].narrative }}</p>
     <p>Sello Autenticocion:</p>
     <p>{{ credential.evidence.[1].narrative }}</p>
