debugging html template

--- a/html-templates/mock-tec-degree-template.html
+++ b/html-templates/mock-tec-degree-template.html
@@ -57,7 +57,7 @@
 <body>
 
 <div class="main-container">
-    <div>image would go here</div>
+    <div><img src="https://github.com/digitalcredentials/test-files/assets/206059/b8eac313-ca72-43c3-a0ed-6ffca54733cc" width="600" height="171" alt=""/></div>
     <p>concede a</p>
     <h2>{{ credential.subject.name }}</h2>
     <p>el titulo profesional de</p>
