debugging html template

--- a/html-templates/mock-tec-degree-template.html
+++ b/html-templates/mock-tec-degree-template.html
@@ -27,6 +27,7 @@
 
         h2 {
             margin: 10px 0;
+            text-align: center;
         }
 
         .signatures-container {
@@ -59,7 +60,7 @@
 <div class="main-container">
     <div><img src="https://github.com/digitalcredentials/test-files/assets/206059/b8eac313-ca72-43c3-a0ed-6ffca54733cc" width="600" height="171" alt=""/></div>
     <p>concede a</p>
-    <h2>{{ credential.subject.name }}</h2>
+    <h2>{{ credential.credentialSubject.name }}</h2>
     <p>el titulo profesional de</p>
     <h2>{{ credential.name }}</h2>
     <p>considerando que ha cumplido con los estudios correspondientes y satisfecho todas los requisitos necesarios.</p>
