--- a/html-templates/mock-tec-degree-template.html
+++ b/html-templates/mock-tec-degree-template.html
@@ -69,15 +69,13 @@
     <div class="signatures-container"> 
     <img src="https://github.com/digitalcredentials/test-files/assets/206059/6acd3f0a-a774-4170-a93a-6079dc543125" width="500" height="124" alt=""/> </div>
     <p>Titulo Electrónico folio control: {{ credential.evidence.[0].narrative }}</p>
-    <p>Sello Autenticocion:</p>
+    <p>Sello Autenticoción:</p>
     <p>{{ credential.evidence.[1].narrative }}</p>
-    <p>No. Certifico Autoridad:</p>
-    <p>{{ credential.evidence.[2].narrative }}</p>
+    <p>No. Certifico Autoridad: {{ credential.evidence.[2].narrative }}</p>
+    <p>Sello Título:</p>
      <p>{{ credential.evidence.[3].narrative }}</p>
-    <p>Fecha Autenticacion:</p>
-    <p>{{ credential.evidence.[4].narrative }}</p>
-    <p>Folio Digital:</p>
-    <p>{{ credential.evidence.[5].narrative }}</p>
+    <p>Fecha Autenticación: {{ credential.evidence.[4].narrative }}</p>
+    <p>Folio Digital: {{ credential.evidence.[5].narrative }}</p>
 </div>
 </body>
 </html>
