--- a/html-templates/rendermethod-qrcode-test.html
+++ b/html-templates/rendermethod-qrcode-test.html
@@ -33,11 +33,8 @@ p.upper {
 	<P>INSTITUTE AT CAMBRIDGE IN THE COMMONWEALTH OF</P>
 	<p>MASSACHUSETTS</p>
 	<p><strong>September 16, 2020</strong></p>
-	
-	<img src="https://github.com/digitalcredentials/test-files/assets/206059/f81fb6d4-eaf4-4709-a38e-1d47fb308e62" width="223" height="303" alt=""/> 
-</div>
-<div align="center">
-	<img src={{ qr_code }} width="100" height="100" alt="QR Code"/>
+	<div><img src="https://github.com/digitalcredentials/test-files/assets/206059/f81fb6d4-eaf4-4709-a38e-1d47fb308e62" width="223" height="303" alt=""/></div>
+	<div><img src={{ qr_code }} width="100" height="100" alt="QR Code"/></div>
 </div>
 </body>
 </html>
